package diag2code;

public interface LastPlayedCardProviderITF {
    public Card getLastPlayedCard();
}
