# UNO classes



@startuml
skinparam nodesep 100
skinparam ranksep 50

class Table {
  Table(LastPlayedCardProviderITF)
  getNumberOfPlayer(): int
  playerSits(name: String): Player
  getLastPlayer(): Player
  setLastPlayer(Player)
  getPlayerPosition(Player): int
  getLastPlayedCard(): Card
}

class Player{
  - name : String

  Player(name: String, t: Table)
  getHand(): Hand
  getName(): String
  getNumberOfCards(): int
}

class Hand{
  pickedACard(c:Card)
  playCard(c:Card)
  holdsCard(c:Card): boolean
  nbrOfCards(): int
}


class Card {
  + color : String
  + value : String

  Card(color: String, value: String)

  getColor(): String
  setColor(String)
  getValue(): String
  setValue(String)
}

class Deck {
  Deck(List<Card>) : Deck
  drawACard(): Card
  addCardToPlayed(c: Card)
  getLastPlayedCard(): Card
}

interface LastPlayedCardProviderITF {
  getLastPlayedCard(): Card
}

Table o-> "*"Player
Table *-> "lastPlayer" Player
Table "1" <-* Player
Player -> "1" Hand
Hand --> "*" Card

Deck -> " * played\n * draw" Card

Table --> LastPlayedCardProviderITF
LastPlayedCardProviderITF <|.. Deck

@enduml